--- a/acsii/vercel.json
+++ b/acsii/vercel.json
@@ -1,9 +1,8 @@
 {
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "vercel-build.sh",
+      "use": "@vercel/static-build"
     }
   ],
   "rewrites": [
