--- a/acsii/vercel.json
+++ b/acsii/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "framework": null,
+  "buildCommand": "npx vite build",
   "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
