--- a/acsii/vercel.json
+++ b/acsii/vercel.json
@@ -1,6 +1,6 @@
 {
-  "framework": "vite",
-  "buildCommand": "./node_modules/.bin/vite build",
+  "framework": null,
+  "buildCommand": "npm install && ./node_modules/.bin/vite build",
   "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
