--- a/acsii/render.yaml
+++ b/acsii/render.yaml
@@ -5,13 +5,15 @@ services:
     name: acsii-iragaki
     buildCommand: npm install && npm run build
     publishPath: dist
-    staticPublishPath: ./dist
+    env: static
     headers:
       - source: /*
         headers:
           - key: Cache-Control
             value: no-cache
+          - key: Access-Control-Allow-Origin
+            value: "*"
     routes:
       - type: rewrite
-        source: /*
-        destination: /index.html
+        source: "/*"
+        destination: "/index.html"
